[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
tracing = "^0.1"
clap = { version = "^4.2", features = ["derive"] }
native-dialog = "0.6.3"
tracing-subscriber= "^0.3"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
turbojpeg = "0.5.2"
anyhow = "1.0.70"
image = "0.24.6"


[dependencies.rascam]
path = "./rascam"
